Fri Dec 17 08:15:18 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/IFR_Service/be_global.cpp:

          During construction of BE_GlobalData, set preserve_cpp_keywords on
          the idl_global to true.  It is set to false during FE
          initialization.

Fri Dec 17 06:45:19 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/IFR_Service/drv_args.cpp:
        * orbsvcs/IFR_Service/drv_preproc.cpp:
        * orbsvcs/IFR_Service/tao_idl.cpp:

          Created IFR_Service counterparts to these files that only #include
          the original from TAO_IDL.  This has been brought about due to the
          differences between BE_GlobalData from the TAO_IDL_BE and the
          TAO_IFR_BE.  VPATH, which was previously used, causes the object
          files from these files to be taken from the TAO_IDL build which
          do not work when tao_ifr is created from them.  See the comment in
          each of these files for more detail.

        * orbsvcs/IFR_Service/IFR_Service.mpc:

          Removed the VPATH portion and changed to reference the new files
          instead of the ones from TAO_IDL.

Thu Dec 16 09:41:35 2004  Chad Elliott  <elliott_c@ociweb.com>

        * examples/Simple/time-date/svc.conf:

          Removed the ./ from the Time_Date library.  This caused problems
          on Windows and with the run_test.pl it is not necessary.

Wed Dec 15 14:14:22 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/IFR_Service/ifr_adding_visitor_structure.cpp:

          Remove build warnings from gcc 2.95.3.

Wed Dec 15 11:37:50 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/tests/Bug_1393_Regression/run_test.pl:

          My previous checkin

          Tue Dec  7 16:35:59 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

          actually fixed the path to tao_idl (which was also incorrect).
          This fix changes the path to tao_ifr, as the above entry stated.
