@@ -1,3 +1,11 @@
+Fri Dec 17 08:47:05 2004  Chad Elliott  <elliott_c@ociweb.com>
+
+        * orbsvcs/tests/Bug_1437_Regression/run_test.pl:
+
+          Rewrote the tao_imr section to use perl to redirect the tao_imr
+          output and keyed the success of the test off of the return value
+          of tao_imr instead of parsing the output.
+
 Fri Dec 17 08:15:18 2004  Chad Elliott  <elliott_c@ociweb.com>
 
         * orbsvcs/IFR_Service/be_global.cpp:
